Global help window

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -86,7 +86,7 @@ TARGET_INCLUDE_DIRECTORIES(ModelViewer PRIVATE ${GLEW_INCLUDE_DIRS})
 TARGET_INCLUDE_DIRECTORIES(ModelViewer PRIVATE ${glfw3_INCLUDE_DIRS})
 TARGET_INCLUDE_DIRECTORIES(ModelViewer PRIVATE ${OPENGL_INCLUDE_DIRS})
 
-TARGET_LINK_LIBRARIES(ModelViewer ImGui)
-TARGET_LINK_LIBRARIES(ModelViewer GLEW::GLEW)
-TARGET_LINK_LIBRARIES(ModelViewer glfw)
-TARGET_LINK_LIBRARIES(ModelViewer ${OPENGL_LIBRARIES})
+TARGET_LINK_LIBRARIES(ModelViewer PRIVATE ImGui)
+TARGET_LINK_LIBRARIES(ModelViewer PRIVATE GLEW::GLEW)
+TARGET_LINK_LIBRARIES(ModelViewer PRIVATE glfw)
+TARGET_LINK_LIBRARIES(ModelViewer PRIVATE ${OPENGL_LIBRARIES})
