Material manager interface

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -79,8 +79,11 @@ FILE(GLOB_RECURSE LAUNCHER_SRC "Source/Atrc/Launcher/*.cpp" "Source/Atrc/Launche
 ADD_EXECUTABLE(Launcher ${LAUNCHER_SRC})
 TARGET_LINK_LIBRARIES(Launcher Lib Mgr)
 
-FILE(GLOB_RECURSE MODELVIEWER_SRC "Source/Atrc/ModelViewer/*.cpp" "Source/Atrc/ModelViewer/*.h")
-ADD_EXECUTABLE(ModelViewer ${MODELVIEWER_SRC})
+FILE(GLOB MODELVIEWER_SRC_OUTER			   "Source/Atrc/ModelViewer/*.cpp"		    "Source/Atrc/ModelViewer/*.h")
+FILE(GLOB_RECURSE MODELVIEWER_SRC_MATERIAL "Source/Atrc/ModelViewer/Material/*.cpp" "Source/Atrc/ModelViewer/Material/*.h")
+ADD_EXECUTABLE(ModelViewer ${MODELVIEWER_SRC_OUTER} ${MODELVIEWER_SRC_MATERIAL})
+SOURCE_GROUP("Material" FILES ${MODELVIEWER_SRC_MATERIAL})
+SOURCE_GROUP(""			FILES ${MODELVIEWER_SRC_OUTER})
 
 TARGET_INCLUDE_DIRECTORIES(ModelViewer PRIVATE ${GLEW_INCLUDE_DIRS})
 TARGET_INCLUDE_DIRECTORIES(ModelViewer PRIVATE ${glfw3_INCLUDE_DIRS})
