--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -79,25 +79,19 @@ FILE(GLOB_RECURSE LAUNCHER_SRC "Source/Atrc/Launcher/*.cpp" "Source/Atrc/Launche
 ADD_EXECUTABLE(Launcher ${LAUNCHER_SRC})
 TARGET_LINK_LIBRARIES(Launcher Lib Mgr)
 
-FILE(GLOB MODELVIEWER_SRC_OUTER			      "Source/Atrc/ModelViewer/*.cpp"					 "Source/Atrc/ModelViewer/*.h")
-FILE(GLOB MODELVIEWER_SRC_RESOURCE_MANAGEMENT "Source/Atrc/ModelViewer/ResourceManagement/*.cpp" "Source/Atrc/ModelViewer/ResourceManagement/*.h")
-FILE(GLOB MODELVIEWER_SRC_SCENE_MANAGEMENT    "Source/Atrc/ModelViewer/SceneManagement/*.cpp"    "Source/Atrc/ModelViewer/SceneManagement/*.h")
-FILE(GLOB_RECURSE MODELVIEWER_SRC_MATERIAL    "Source/Atrc/ModelViewer/Material/*.cpp"		     "Source/Atrc/ModelViewer/Material/*.h")
-ADD_EXECUTABLE(ModelViewer
-	${MODELVIEWER_SRC_OUTER}
-	${MODELVIEWER_SRC_MATERIAL}
-	${MODELVIEWER_SRC_RESOURCE_MANAGEMENT}
-	${MODELVIEWER_SRC_SCENE_MANAGEMENT})
-SOURCE_GROUP("Material"         FILES ${MODELVIEWER_SRC_MATERIAL})
-SOURCE_GROUP("ResourceManagement" FILES ${MODELVIEWER_SRC_RESOURCE_MANAGEMENT})
-SOURCE_GROUP("SceneManagement"  FILES ${MODELVIEWER_SRC_SCENE_MANAGEMENT})
-SOURCE_GROUP(""					FILES ${MODELVIEWER_SRC_OUTER})
+FILE(GLOB EDITOR_SRC_OUTER			     "Source/Atrc/Editor/*.cpp"					   "Source/Atrc/Editor/*.h")
+FILE(GLOB EDITOR_SRC_RESOURCE_MANAGEMENT "Source/Atrc/Editor/ResourceManagement/*.cpp" "Source/Atrc/Editor/ResourceManagement/*.h")
+ADD_EXECUTABLE(Editor
+	${EDITOR_SRC_OUTER}
+	${EDITOR_SRC_RESOURCE_MANAGEMENT})
+SOURCE_GROUP("ResourceManagement" FILES ${EDITOR_SRC_RESOURCE_MANAGEMENT})
+SOURCE_GROUP(""					  FILES ${EDITOR_SRC_OUTER})
 
-TARGET_INCLUDE_DIRECTORIES(ModelViewer PRIVATE ${GLEW_INCLUDE_DIRS})
-TARGET_INCLUDE_DIRECTORIES(ModelViewer PRIVATE ${glfw3_INCLUDE_DIRS})
-TARGET_INCLUDE_DIRECTORIES(ModelViewer PRIVATE ${OPENGL_INCLUDE_DIRS})
+TARGET_INCLUDE_DIRECTORIES(Editor PRIVATE ${GLEW_INCLUDE_DIRS})
+TARGET_INCLUDE_DIRECTORIES(Editor PRIVATE ${glfw3_INCLUDE_DIRS})
+TARGET_INCLUDE_DIRECTORIES(Editor PRIVATE ${OPENGL_INCLUDE_DIRS})
 
-TARGET_LINK_LIBRARIES(ModelViewer PRIVATE ImGui)
-TARGET_LINK_LIBRARIES(ModelViewer PRIVATE GLEW::GLEW)
-TARGET_LINK_LIBRARIES(ModelViewer PRIVATE glfw)
-TARGET_LINK_LIBRARIES(ModelViewer PRIVATE ${OPENGL_LIBRARIES})
+TARGET_LINK_LIBRARIES(Editor PRIVATE ImGui)
+TARGET_LINK_LIBRARIES(Editor PRIVATE GLEW::GLEW)
+TARGET_LINK_LIBRARIES(Editor PRIVATE glfw)
+TARGET_LINK_LIBRARIES(Editor PRIVATE ${OPENGL_LIBRARIES})
