项目链接结构调整

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -74,10 +74,16 @@ FILE(GLOB_RECURSE IMGUI_SRC "Source/Lib/imgui/*.cpp" "Source/Lib/imgui/*.h")
 ADD_LIBRARY(ImGui STATIC ${IMGUI_SRC})
 TARGET_INCLUDE_DIRECTORIES(ImGui PRIVATE ${GLEW_INCLUDE_DIRS})
 TARGET_INCLUDE_DIRECTORIES(ImGui PRIVATE ${glfw3_INCLUDE_DIRS})
+TARGET_INCLUDE_DIRECTORIES(ImGui PRIVATE ${OPENGL_INCLUDE_DIRS})
+
+ADD_LIBRARY(AGZUtils STATIC "Source/Lib/AGZUtils/AGZUtils.cpp")
+TARGET_INCLUDE_DIRECTORIES(AGZUtils PRIVATE ${GLEW_INCLUDE_DIRS})
+TARGET_INCLUDE_DIRECTORIES(AGZUtils PRIVATE ${glfw3_INCLUDE_DIRS})
+TARGET_INCLUDE_DIRECTORIES(AGZUtils PRIVATE ${OPENGL_INCLUDE_DIRS})
 
 FILE(GLOB_RECURSE LAUNCHER_SRC "Source/Atrc/Launcher/*.cpp" "Source/Atrc/Launcher/*.h")
 ADD_EXECUTABLE(Launcher ${LAUNCHER_SRC})
-TARGET_LINK_LIBRARIES(Launcher Lib Mgr)
+TARGET_LINK_LIBRARIES(Launcher Lib Mgr AGZUtils)
 
 FILE(GLOB EDITOR_SRC_OUTER			     "Source/Atrc/Editor/*.cpp"					   "Source/Atrc/Editor/*.h")
 FILE(GLOB EDITOR_SRC_RESOURCE_MANAGEMENT "Source/Atrc/Editor/ResourceManagement/*.cpp" "Source/Atrc/Editor/ResourceManagement/*.h")
@@ -95,3 +101,6 @@ TARGET_LINK_LIBRARIES(Editor PRIVATE ImGui)
 TARGET_LINK_LIBRARIES(Editor PRIVATE GLEW::GLEW)
 TARGET_LINK_LIBRARIES(Editor PRIVATE glfw)
 TARGET_LINK_LIBRARIES(Editor PRIVATE ${OPENGL_LIBRARIES})
+TARGET_LINK_LIBRARIES(Editor PRIVATE Lib)
+TARGET_LINK_LIBRARIES(Editor PRIVATE Mgr)
+TARGET_LINK_LIBRARIES(Editor PRIVATE AGZUtils)
