--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -19,56 +19,23 @@ FIND_PACKAGE(OpenGL REQUIRED)
 FIND_PACKAGE(glfw3 CONFIG REQUIRED)
 FIND_PACKAGE(GLEW REQUIRED)
 
-FILE(GLOB_RECURSE LIB_SRC_CAMERA         "Source/Atrc/Lib/Camera/*.cpp"        "Source/Atrc/Lib/Camera/*.h")
-FILE(GLOB_RECURSE LIB_SRC_CORE           "Source/Atrc/Lib/Core/*.cpp"          "Source/Atrc/Lib/Core/*.h")
-FILE(GLOB_RECURSE LIB_SRC_ENTITY         "Source/Atrc/Lib/Entity/*.cpp"        "Source/Atrc/Lib/Entity/*.h")
-FILE(GLOB_RECURSE LIB_SRC_FILM_FILTER    "Source/Atrc/Lib/FilmFilter/*.cpp"    "Source/Atrc/Lib/FilmFilter/*.h")
-FILE(GLOB_RECURSE LIB_SRC_GEOMETRY       "Source/Atrc/Lib/Geometry/*.cpp"      "Source/Atrc/Lib/Geometry/*.h")
-FILE(GLOB_RECURSE LIB_SRC_LIGHT          "Source/Atrc/Lib/Light/*.cpp"         "Source/Atrc/Lib/Light/*.h")
-FILE(GLOB_RECURSE LIB_SRC_MATERIAL       "Source/Atrc/Lib/Material/*.cpp"      "Source/Atrc/Lib/Material/*.h")
-FILE(GLOB_RECURSE LIB_SRC_MEDIUM         "Source/Atrc/Lib/Medium/*.cpp"        "Source/Atrc/Lib/Medium/*.h")
-FILE(GLOB_RECURSE LIB_SRC_POST_PROCESSOR "Source/Atrc/Lib/PostProcessor/*.cpp" "Source/Atrc/Lib/PostProcessor/*.h")
-FILE(GLOB_RECURSE LIB_SRC_RENDERER		 "Source/Atrc/Lib/Renderer/*.cpp"      "Source/Atrc/Lib/Renderer/*.h")
-FILE(GLOB_RECURSE LIB_SRC_REPORTER		 "Source/Atrc/Lib/Reporter/*.cpp"      "Source/Atrc/Lib/Reporter/*.h")
-FILE(GLOB_RECURSE LIB_SRC_SAMPLER		 "Source/Atrc/Lib/Sampler/*.cpp"       "Source/Atrc/Lib/Sampler/*.h")
-FILE(GLOB_RECURSE LIB_SRC_TEXTURE		 "Source/Atrc/Lib/Texture/*.cpp"       "Source/Atrc/Lib/Texture/*.h")
-FILE(GLOB_RECURSE LIB_SRC_UTILITY		 "Source/Atrc/Lib/Utility/*.cpp"       "Source/Atrc/Lib/Utility/*.h")
-ADD_LIBRARY(
-	Lib STATIC
-	${LIB_SRC_CAMERA}
-	${LIB_SRC_CORE}
-	${LIB_SRC_ENTITY}
-	${LIB_SRC_FILM_FILTER}
-	${LIB_SRC_GEOMETRY}
-	${LIB_SRC_LIGHT}
-	${LIB_SRC_MATERIAL}
-	${LIB_SRC_MEDIUM}
-	${LIB_SRC_POST_PROCESSOR}
-	${LIB_SRC_RENDERER}
-	${LIB_SRC_REPORTER}
-	${LIB_SRC_SAMPLER}
-	${LIB_SRC_TEXTURE}
-	${LIB_SRC_UTILITY})
-SOURCE_GROUP("Camera"        FILES ${LIB_SRC_CAMERA})
-SOURCE_GROUP("Core"          FILES ${LIB_SRC_CORE})
-SOURCE_GROUP("Entity"        FILES ${LIB_SRC_ENTITY})
-SOURCE_GROUP("FilmFilter"    FILES ${LIB_SRC_FILM_FILTER})
-SOURCE_GROUP("Geometry"      FILES ${LIB_SRC_GEOMETRY})
-SOURCE_GROUP("Light"         FILES ${LIB_SRC_LIGHT})
-SOURCE_GROUP("Material"      FILES ${LIB_SRC_MATERIAL})
-SOURCE_GROUP("Medium"        FILES ${LIB_SRC_MEDIUM})
-SOURCE_GROUP("PostProcessor" FILES ${LIB_SRC_POST_PROCESSOR})
-SOURCE_GROUP("Renderer"      FILES ${LIB_SRC_RENDERER})
-SOURCE_GROUP("Reporter"      FILES ${LIB_SRC_REPORTER})
-SOURCE_GROUP("Sampler"       FILES ${LIB_SRC_SAMPLER})
-SOURCE_GROUP("Texture"       FILES ${LIB_SRC_TEXTURE})
-SOURCE_GROUP("Utility"       FILES ${LIB_SRC_UTILITY})
+FILE(GLOB_RECURSE LIB_SRC "Source/Atrc/Lib/*.cpp" "Source/Atrc/Lib/*.h")
+ADD_LIBRARY(Lib STATIC ${LIB_SRC})
+FOREACH(_SRC IN ITEMS ${LIB_SRC})
+    GET_FILENAME_COMPONENT(LIB_SRC "${_SRC}" PATH)
+    STRING(REPLACE "${CMAKE_SOURCE_DIR}/Source/Atrc/Lib" "" _GRP_PATH "${LIB_SRC}")
+    STRING(REPLACE "/" "\\" _GRP_PATH "${_GRP_PATH}")
+    SOURCE_GROUP("${_GRP_PATH}" FILES "${_SRC}")
+ENDFOREACH()
 
-FILE(GLOB MGR_SRC_OUTER			  "Source/Atrc/Mgr/*.cpp"				 "Source/Atrc/Mgr/*.h")
-FILE(GLOB_RECURSE MGR_SRC_BUILTIN "Source/Atrc/Mgr/BuiltinCreator/*.cpp" "Source/Atrc/Mgr/BuiltinCreator/*.h")
-ADD_LIBRARY(Mgr STATIC ${MGR_SRC_OUTER} ${MGR_SRC_BUILTIN})
-SOURCE_GROUP("Builtin" FILES ${MGR_SRC_BUILTIN})
-SOURCE_GROUP(""		   FILES ${MGR_SRC_OUTER})
+FILE(GLOB_RECURSE MGR_SRC "Source/Atrc/Mgr/*.cpp" "Source/Atrc/Mgr/*.h")
+ADD_LIBRARY(Mgr STATIC ${MGR_SRC})
+FOREACH(_SRC IN ITEMS ${MGR_SRC})
+    GET_FILENAME_COMPONENT(MGR_SRC "${_SRC}" PATH)
+    STRING(REPLACE "${CMAKE_SOURCE_DIR}/Source/Atrc/Mgr" "" _GRP_PATH "${MGR_SRC}")
+    STRING(REPLACE "/" "\\" _GRP_PATH "${_GRP_PATH}")
+    SOURCE_GROUP("${_GRP_PATH}" FILES "${_SRC}")
+ENDFOREACH()
 
 FILE(GLOB_RECURSE IMGUI_SRC "Source/Lib/imgui/*.cpp" "Source/Lib/imgui/*.h")
 ADD_LIBRARY(ImGui STATIC ${IMGUI_SRC})
@@ -85,13 +52,14 @@ FILE(GLOB_RECURSE LAUNCHER_SRC "Source/Atrc/Launcher/*.cpp" "Source/Atrc/Launche
 ADD_EXECUTABLE(Launcher ${LAUNCHER_SRC})
 TARGET_LINK_LIBRARIES(Launcher Lib Mgr AGZUtils)
 
-FILE(GLOB EDITOR_SRC_OUTER			     "Source/Atrc/Editor/*.cpp"					   "Source/Atrc/Editor/*.h")
-FILE(GLOB EDITOR_SRC_RESOURCE_MANAGEMENT "Source/Atrc/Editor/ResourceManagement/*.cpp" "Source/Atrc/Editor/ResourceManagement/*.h")
-ADD_EXECUTABLE(Editor
-	${EDITOR_SRC_OUTER}
-	${EDITOR_SRC_RESOURCE_MANAGEMENT})
-SOURCE_GROUP("ResourceManagement" FILES ${EDITOR_SRC_RESOURCE_MANAGEMENT})
-SOURCE_GROUP(""					  FILES ${EDITOR_SRC_OUTER})
+FILE(GLOB_RECURSE EDITOR_SRC "Source/Atrc/Editor/*.cpp" "Source/Atrc/Editor/*.h")
+ADD_EXECUTABLE(Editor ${EDITOR_SRC})
+FOREACH(_SRC IN ITEMS ${EDITOR_SRC})
+    GET_FILENAME_COMPONENT(EDITOR_SRC "${_SRC}" PATH)
+    STRING(REPLACE "${CMAKE_SOURCE_DIR}/Source/Atrc/Editor" "" _GRP_PATH "${EDITOR_SRC}")
+    STRING(REPLACE "/" "\\" _GRP_PATH "${_GRP_PATH}")
+    SOURCE_GROUP("${_GRP_PATH}" FILES "${_SRC}")
+ENDFOREACH()
 
 TARGET_INCLUDE_DIRECTORIES(Editor PRIVATE ${GLEW_INCLUDE_DIRS})
 TARGET_INCLUDE_DIRECTORIES(Editor PRIVATE ${glfw3_INCLUDE_DIRS})
