--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,4 @@
 [submodule "Source/Lib/Utils"]
 	path = Source/Lib/Utils
-	url = https://github.com/AirGuanZ/Utils
+	url = https://github.com/AirGuanZ/Utils.git
+	shallow = true
