将SH2D加入项目范围

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -80,3 +80,15 @@ TARGET_LINK_LIBRARIES(Editor PRIVATE ${OPENGL_LIBRARIES})
 TARGET_LINK_LIBRARIES(Editor PRIVATE Lib)
 TARGET_LINK_LIBRARIES(Editor PRIVATE Mgr)
 TARGET_LINK_LIBRARIES(Editor PRIVATE AGZUtils)
+
+FILE(GLOB_RECURSE SH2D_SRC "Source/Atrc/SH2D/*.cpp" "Source/Atrc/SH2D/*.h")
+ADD_EXECUTABLE(SH2D ${SH2D_SRC})
+FOREACH(_SRC IN ITEMS ${SH2D_SRC})
+    GET_FILENAME_COMPONENT(SH2D_SRC "${_SRC}" PATH)
+    STRING(REPLACE "${CMAKE_SOURCE_DIR}/Source/Atrc/SH2D" "" _GRP_PATH "${SH2D_SRC}")
+    STRING(REPLACE "/" "\\" _GRP_PATH "${_GRP_PATH}")
+    SOURCE_GROUP("${_GRP_PATH}" FILES "${_SRC}")
+ENDFOREACH()
+TARGET_LINK_LIBRARIES(SH2D PRIVATE Lib)
+TARGET_LINK_LIBRARIES(SH2D PRIVATE Mgr)
+TARGET_LINK_LIBRARIES(SH2D PRIVATE AGZUtils)
