新的ResourceInstance管理框架

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -4,18 +4,6 @@ IF(DEFINED ENV{VCPKG_ROOT} AND NOT DEFINED CMAKE_TOOLCHAIN_FILE)
   SET(CMAKE_TOOLCHAIN_FILE $ENV{VCPKG_ROOT}/scripts/buildsystems/vcpkg.cmake CACHE STRING "")
 ENDIF()
 
-MACRO(QT_BEGIN)
-SET(CMAKE_AUTOMOC ON)
-SET(CMAKE_AUTOUIC ON)
-SET(CMAKE_AUTORCC ON)
-ENDMACRO(QT_BEGIN)
-
-MACRO(QT_END)
-SET(CMAKE_AUTOMOC OFF)
-SET(CMAKE_AUTOUIC OFF)
-SET(CMAKE_AUTORCC OFF)
-ENDMACRO(QT_END)
-
 PROJECT(Atrc)
 
 SET(CMAKE_INCLUDE_CURRENT_DIR ON)
@@ -103,3 +91,21 @@ FOREACH(_SRC IN ITEMS ${SH2D_SRC})
     SOURCE_GROUP("${_GRP_PATH}" FILES "${_SRC}")
 ENDFOREACH()
 TARGET_LINK_LIBRARIES(SH2D PRIVATE Lib Mgr AGZUtils)
+
+FILE(GLOB_RECURSE ATRC_SRC "Source/Atrc/Atrc/*.cpp" "Source/Atrc/Atrc/*.h")
+ADD_EXECUTABLE(Atrc ${ATRC_SRC})
+FOREACH(_SRC IN ITEMS ${ATRC_SRC})
+    GET_FILENAME_COMPONENT(ATRC_SRC "${_SRC}" PATH)
+    STRING(REPLACE "${CMAKE_SOURCE_DIR}/Source/Atrc/Atrc" "" _GRP_PATH "${ATRC_SRC}")
+    STRING(REPLACE "/" "\\" _GRP_PATH "${_GRP_PATH}")
+    SOURCE_GROUP("${_GRP_PATH}" FILES "${_SRC}")
+ENDFOREACH()
+
+TARGET_INCLUDE_DIRECTORIES(Editor PRIVATE
+	${GLEW_INCLUDE_DIRS}
+	${glfw3_INCLUDE_DIRS}
+	${OPENGL_INCLUDE_DIRS})
+
+TARGET_LINK_LIBRARIES(Editor PRIVATE
+	ImGui GLEW::GLEW glfw ${OPENGL_LIBRARIES}
+	Lib Mgr AGZUtils)
