删除冗余局部函数

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -101,11 +101,11 @@ FOREACH(_SRC IN ITEMS ${ATRC_SRC})
     SOURCE_GROUP("${_GRP_PATH}" FILES "${_SRC}")
 ENDFOREACH()
 
-TARGET_INCLUDE_DIRECTORIES(Editor PRIVATE
+TARGET_INCLUDE_DIRECTORIES(Atrc PRIVATE
 	${GLEW_INCLUDE_DIRS}
 	${glfw3_INCLUDE_DIRS}
 	${OPENGL_INCLUDE_DIRS})
 
-TARGET_LINK_LIBRARIES(Editor PRIVATE
+TARGET_LINK_LIBRARIES(Atrc PRIVATE
 	ImGui GLEW::GLEW glfw ${OPENGL_LIBRARIES}
 	Lib Mgr AGZUtils)
