在clang下通过编译和使用测试

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -16,6 +16,11 @@ IF(MSVC)
     ADD_DEFINITIONS(-D_CRT_SECURE_NO_WARNINGS)
 ENDIF()
 
+IF("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang")
+    SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -stdlib=libc++ -pthread")
+    SET(STDFS_LD_LIB "c++fs")
+ENDIF()
+
 FIND_PACKAGE(OpenGL REQUIRED)
 FIND_PACKAGE(glfw3 CONFIG REQUIRED)
 FIND_PACKAGE(GLEW REQUIRED)
@@ -62,7 +67,7 @@ TARGET_INCLUDE_DIRECTORIES(AGZUtils PRIVATE
 
 FILE(GLOB_RECURSE LAUNCHER_SRC "Source/Atrc/Launcher/*.cpp" "Source/Atrc/Launcher/*.h")
 ADD_EXECUTABLE(Launcher ${LAUNCHER_SRC})
-TARGET_LINK_LIBRARIES(Launcher Lib Mgr AGZUtils)
+TARGET_LINK_LIBRARIES(Launcher Mgr Lib AGZUtils ${STDFS_LD_LIB})
 
 FILE(GLOB_RECURSE EDITOR_SRC "Source/Atrc/Editor/*.cpp" "Source/Atrc/Editor/*.h")
 ADD_EXECUTABLE(Editor ${EDITOR_SRC})
@@ -80,7 +85,7 @@ TARGET_INCLUDE_DIRECTORIES(Editor PRIVATE
 
 TARGET_LINK_LIBRARIES(Editor PRIVATE
 	ImGui GLEW::GLEW glfw ${OPENGL_LIBRARIES}
-	Lib Mgr AGZUtils)
+	Mgr Lib AGZUtils ${STDFS_LD_LIB})
 
 FILE(GLOB_RECURSE SH2D_SRC "Source/Atrc/SH2D/*.cpp" "Source/Atrc/SH2D/*.h")
 ADD_EXECUTABLE(SH2D ${SH2D_SRC})
@@ -90,7 +95,7 @@ FOREACH(_SRC IN ITEMS ${SH2D_SRC})
     STRING(REPLACE "/" "\\" _GRP_PATH "${_GRP_PATH}")
     SOURCE_GROUP("${_GRP_PATH}" FILES "${_SRC}")
 ENDFOREACH()
-TARGET_LINK_LIBRARIES(SH2D PRIVATE Lib Mgr AGZUtils)
+TARGET_LINK_LIBRARIES(SH2D PRIVATE Mgr Lib AGZUtils ${STDFS_LD_LIB})
 
 FILE(GLOB_RECURSE ATRC_SRC "Source/Atrc/Atrc/*.cpp" "Source/Atrc/Atrc/*.h")
 ADD_EXECUTABLE(Atrc ${ATRC_SRC})
@@ -108,4 +113,4 @@ TARGET_INCLUDE_DIRECTORIES(Atrc PRIVATE
 
 TARGET_LINK_LIBRARIES(Atrc PRIVATE
 	ImGui GLEW::GLEW glfw ${OPENGL_LIBRARIES}
-	Lib Mgr AGZUtils)
+	Mgr Lib AGZUtils ${STDFS_LD_LIB})
