--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -27,7 +27,6 @@ ENDIF()
 FIND_PACKAGE(OpenGL REQUIRED)
 FIND_PACKAGE(glfw3 CONFIG REQUIRED)
 FIND_PACKAGE(GLEW REQUIRED)
-FIND_PACKAGE(Qt5 COMPONENTS REQUIRED Core Gui Widgets)
 
 FILE(GLOB_RECURSE LIB_SRC "Source/Atrc/Lib/*.cpp" "Source/Atrc/Lib/*.h")
 ADD_LIBRARY(Lib STATIC ${LIB_SRC})
@@ -47,7 +46,7 @@ FOREACH(_SRC IN ITEMS ${MGR_SRC})
     SOURCE_GROUP("${_GRP_PATH}" FILES "${_SRC}")
 ENDFOREACH()
 
-FILE(GLOB_RECURSE IMGUI_SRC "Source/Lib/imgui/*.cpp" "Source/Lib/imgui/*.h")
+FILE(GLOB_RECURSE IMGUI_SRC "Source/Lib/imgui/*.cpp" "Source/Lib/imgui/*.h" "Source/Lib/ImFileBrowser/*.h")
 ADD_LIBRARY(ImGui STATIC ${IMGUI_SRC})
 TARGET_INCLUDE_DIRECTORIES(ImGui PRIVATE
 	${GLEW_INCLUDE_DIRS}
@@ -114,6 +113,7 @@ TARGET_INCLUDE_DIRECTORIES(Atrc PRIVATE
 	${glfw3_INCLUDE_DIRS}
 	${OPENGL_INCLUDE_DIRS})
 
-TARGET_LINK_LIBRARIES(Atrc PRIVATE
+TARGET_LINK_LIBRARIES(Atrc
+	PRIVATE
 	ImGui GLEW::GLEW glfw ${OPENGL_LIBRARIES}
 	Mgr Lib AGZUtils ${STDFS_LD_LIB})
