引入Constant1 Texture；自动计算ResourceCreatorSelector的宽度

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -116,4 +116,4 @@ TARGET_INCLUDE_DIRECTORIES(Atrc PRIVATE
 TARGET_LINK_LIBRARIES(Atrc
 	PRIVATE
 	ImGui GLEW::GLEW glfw ${OPENGL_LIBRARIES}
-	Mgr Lib AGZUtils ${STDFS_LD_LIB})
+	AGZUtils ${STDFS_LD_LIB})
