新的Light/Scene -> SH函数

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -28,7 +28,7 @@ FIND_PACKAGE(OpenGL REQUIRED)
 FIND_PACKAGE(glfw3 CONFIG REQUIRED)
 FIND_PACKAGE(GLEW REQUIRED)
 
-FILE(GLOB_RECURSE LIB_SRC "Source/Atrc/Lib/*.cpp" "Source/Atrc/Lib/*.h")
+FILE(GLOB_RECURSE LIB_SRC "Source/Atrc/Lib/*.cpp" "Source/Atrc/Lib/*.h" "Source/Atrc/Lib/*.inl")
 ADD_LIBRARY(Lib STATIC ${LIB_SRC})
 FOREACH(_SRC IN ITEMS ${LIB_SRC})
     GET_FILENAME_COMPONENT(LIB_SRC "${_SRC}" PATH)
@@ -37,7 +37,7 @@ FOREACH(_SRC IN ITEMS ${LIB_SRC})
     SOURCE_GROUP("${_GRP_PATH}" FILES "${_SRC}")
 ENDFOREACH()
 
-FILE(GLOB_RECURSE MGR_SRC "Source/Atrc/Mgr/*.cpp" "Source/Atrc/Mgr/*.h")
+FILE(GLOB_RECURSE MGR_SRC "Source/Atrc/Mgr/*.cpp" "Source/Atrc/Mgr/*.h" "Source/Atrc/Mgr/*.inl")
 ADD_LIBRARY(Mgr STATIC ${MGR_SRC})
 FOREACH(_SRC IN ITEMS ${MGR_SRC})
     GET_FILENAME_COMPONENT(MGR_SRC "${_SRC}" PATH)
@@ -53,7 +53,7 @@ TARGET_INCLUDE_DIRECTORIES(ImGui PRIVATE
 	${glfw3_INCLUDE_DIRS}
 	${OPENGL_INCLUDE_DIRS})
 
-FILE(GLOB_RECURSE AGZUTILS_SRC "Source/Lib/AGZUtils/*.cpp" "Source/Lib/Utils/Src/*.h" "Source/Lib/Utils/Src/*.cpp")
+FILE(GLOB_RECURSE AGZUTILS_SRC "Source/Lib/AGZUtils/*.cpp" "Source/Lib/Utils/Src/*.h" "Source/Lib/Utils/Src/*.cpp" "Source/Lib/Utils/Src/*.inl")
 ADD_LIBRARY(AGZUtils STATIC ${AGZUTILS_SRC})
 FOREACH(_SRC IN ITEMS ${AGZUTILS_SRC})
     GET_FILENAME_COMPONENT(AGZUTILS_SRC "${_SRC}" PATH)
@@ -71,7 +71,7 @@ FILE(GLOB_RECURSE LAUNCHER_SRC "Source/Atrc/Launcher/*.cpp" "Source/Atrc/Launche
 ADD_EXECUTABLE(Launcher ${LAUNCHER_SRC})
 TARGET_LINK_LIBRARIES(Launcher Mgr Lib AGZUtils ${STDFS_LD_LIB})
 
-FILE(GLOB_RECURSE EDITOR_SRC "Source/Atrc/Editor/*.cpp" "Source/Atrc/Editor/*.h")
+FILE(GLOB_RECURSE EDITOR_SRC "Source/Atrc/Editor/*.cpp" "Source/Atrc/Editor/*.h"  "Source/Atrc/Editor/*.inl")
 ADD_EXECUTABLE(Editor ${EDITOR_SRC})
 FOREACH(_SRC IN ITEMS ${EDITOR_SRC})
     GET_FILENAME_COMPONENT(EDITOR_SRC "${_SRC}" PATH)
@@ -99,7 +99,7 @@ FOREACH(_SRC IN ITEMS ${SH2D_SRC})
 ENDFOREACH()
 TARGET_LINK_LIBRARIES(SH2D PRIVATE Mgr Lib AGZUtils ${STDFS_LD_LIB})
 
-FILE(GLOB_RECURSE ATRC_SRC "Source/Atrc/Atrc/*.cpp" "Source/Atrc/Atrc/*.h")
+FILE(GLOB_RECURSE ATRC_SRC "Source/Atrc/Atrc/*.cpp" "Source/Atrc/Atrc/*.h" "Source/Atrc/Atrc/*.inl")
 ADD_EXECUTABLE(Atrc ${ATRC_SRC})
 FOREACH(_SRC IN ITEMS ${ATRC_SRC})
     GET_FILENAME_COMPONENT(ATRC_SRC "${_SRC}" PATH)
