add library cnpy

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,6 +6,8 @@ ENDIF()
 
 PROJECT(Atrc)
 
+ADD_SUBDIRECTORY(${PROJECT_SOURCE_DIR}/Source/Lib/cnpy/)
+
 SET(CMAKE_INCLUDE_CURRENT_DIR ON)
 INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/Source/Lib/Utils/Src/)
 INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/Source/)
