--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,8 +6,6 @@ ENDIF()
 
 PROJECT(Atrc)
 
-ADD_SUBDIRECTORY(${PROJECT_SOURCE_DIR}/Source/Lib/cnpy/)
-
 SET(CMAKE_INCLUDE_CURRENT_DIR ON)
 INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/Source/Lib/Utils/Src/)
 INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/Source/)
@@ -29,6 +27,7 @@ ENDIF()
 FIND_PACKAGE(OpenGL REQUIRED)
 FIND_PACKAGE(glfw3 CONFIG REQUIRED)
 FIND_PACKAGE(GLEW REQUIRED)
+FIND_PACKAGE(ZLIB REQUIRED)
 
 FILE(GLOB_RECURSE CORE_SRC "Source/Atrc/Core/*.cpp" "Source/Atrc/Core/*.h" "Source/Atrc/Core/*.inl")
 ADD_LIBRARY(Core STATIC ${CORE_SRC})
@@ -86,10 +85,13 @@ TARGET_INCLUDE_DIRECTORIES(Editor PRIVATE
 	${GLEW_INCLUDE_DIRS}
 	${glfw3_INCLUDE_DIRS}
 	${OPENGL_INCLUDE_DIRS})
-
 TARGET_LINK_LIBRARIES(Editor PRIVATE
 	ImGui GLEW::GLEW glfw ${OPENGL_LIBRARIES}
 	Mgr Core AGZUtils ${STDFS_LD_LIB})
+
+ADD_LIBRARY(cnpy STATIC "Source/Lib/cnpy/cnpy.cpp" "Source/Lib/cnpy/cnpy.h")
+TARGET_INCLUDE_DIRECTORIES(cnpy PRIVATE ${ZLIB_INCLUDE_DIRS})
+TARGET_LINK_LIBRARIES(cnpy ${ZLIB_LIBRARIES})
 
 FILE(GLOB_RECURSE SH2D_SRC "Source/Atrc/SH2D/*.cpp" "Source/Atrc/SH2D/*.h")
 ADD_EXECUTABLE(SH2D ${SH2D_SRC})
@@ -99,4 +101,4 @@ FOREACH(_SRC IN ITEMS ${SH2D_SRC})
     STRING(REPLACE "/" "\\" _GRP_PATH "${_GRP_PATH}")
     SOURCE_GROUP("${_GRP_PATH}" FILES "${_SRC}")
 ENDFOREACH()
-TARGET_LINK_LIBRARIES(SH2D PRIVATE Mgr Core AGZUtils ${STDFS_LD_LIB})
+TARGET_LINK_LIBRARIES(SH2D PRIVATE Mgr Core AGZUtils cnpy ${STDFS_LD_LIB})
