将ProjectLight结果输出为npz

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -24,12 +24,10 @@ ELSEIF("${CMAKE_CXX_COMPILER_ID}" STREQUAL "GNU")
     SET(STDFS_LD_LIB "stdc++fs")
 ENDIF()
 
-FIND_PACKAGE(cxxopts REQUIRED)
 FIND_PACKAGE(OpenGL REQUIRED)
 FIND_PACKAGE(glfw3 CONFIG REQUIRED)
 FIND_PACKAGE(GLEW REQUIRED)
 FIND_PACKAGE(ZLIB REQUIRED)
-FIND_PACKAGE(cxxopts REQUIRED)
 
 FILE(GLOB_RECURSE CORE_SRC "Source/Atrc/Core/*.cpp" "Source/Atrc/Core/*.h" "Source/Atrc/Core/*.inl")
 ADD_LIBRARY(Core STATIC ${CORE_SRC})
@@ -103,5 +101,5 @@ FOREACH(_SRC IN ITEMS ${SH2D_SRC})
     STRING(REPLACE "/" "\\" _GRP_PATH "${_GRP_PATH}")
     SOURCE_GROUP("${_GRP_PATH}" FILES "${_SRC}")
 ENDFOREACH()
-TARGET_INCLUDE_DIRECTORIES(SH2D PRIVATE ${cxxopts_INCLUDE_DIRS})
-TARGET_LINK_LIBRARIES(SH2D PRIVATE Mgr Core AGZUtils cnpy cxxopts::cxxopts ${STDFS_LD_LIB})
+TARGET_INCLUDE_DIRECTORIES(SH2D PRIVATE)
+TARGET_LINK_LIBRARIES(SH2D PRIVATE Mgr Core AGZUtils cnpy ${STDFS_LD_LIB})
