--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -87,7 +87,7 @@ TARGET_INCLUDE_DIRECTORIES(Editor PRIVATE
 	${OPENGL_INCLUDE_DIRS})
 TARGET_LINK_LIBRARIES(Editor PRIVATE
 	ImGui GLEW::GLEW glfw ${OPENGL_LIBRARIES}
-	Mgr Core AGZUtils ${STDFS_LD_LIB})
+	Mgr Core AGZUtils cnpy ${STDFS_LD_LIB})
 
 ADD_LIBRARY(cnpy STATIC "Source/Lib/cnpy/cnpy.cpp" "Source/Lib/cnpy/cnpy.h")
 TARGET_INCLUDE_DIRECTORIES(cnpy PUBLIC ${ZLIB_INCLUDE_DIRS})
