--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -29,77 +29,12 @@ FIND_PACKAGE(glfw3 CONFIG REQUIRED)
 FIND_PACKAGE(GLEW REQUIRED)
 FIND_PACKAGE(ZLIB REQUIRED)
 
-FILE(GLOB_RECURSE CORE_SRC "Source/Atrc/Core/*.cpp" "Source/Atrc/Core/*.h" "Source/Atrc/Core/*.inl")
-ADD_LIBRARY(Core STATIC ${CORE_SRC})
-FOREACH(_SRC IN ITEMS ${CORE_SRC})
-    GET_FILENAME_COMPONENT(CORE_SRC "${_SRC}" PATH)
-    STRING(REPLACE "${CMAKE_SOURCE_DIR}/Source/Atrc/Core" "" _GRP_PATH "${CORE_SRC}")
-    STRING(REPLACE "/" "\\" _GRP_PATH "${_GRP_PATH}")
-    SOURCE_GROUP("${_GRP_PATH}" FILES "${_SRC}")
-ENDFOREACH()
-
-FILE(GLOB_RECURSE MGR_SRC "Source/Atrc/Mgr/*.cpp" "Source/Atrc/Mgr/*.h" "Source/Atrc/Mgr/*.inl")
-ADD_LIBRARY(Mgr STATIC ${MGR_SRC})
-FOREACH(_SRC IN ITEMS ${MGR_SRC})
-    GET_FILENAME_COMPONENT(MGR_SRC "${_SRC}" PATH)
-    STRING(REPLACE "${CMAKE_SOURCE_DIR}/Source/Atrc/Mgr" "" _GRP_PATH "${MGR_SRC}")
-    STRING(REPLACE "/" "\\" _GRP_PATH "${_GRP_PATH}")
-    SOURCE_GROUP("${_GRP_PATH}" FILES "${_SRC}")
-ENDFOREACH()
-
-FILE(GLOB_RECURSE IMGUI_SRC "Source/Lib/imgui/*.cpp" "Source/Lib/imgui/*.h" "Source/Lib/ImFileBrowser/*.h" "Source/Lib/ImWinLayout/*.h")
-ADD_LIBRARY(ImGui STATIC ${IMGUI_SRC})
-TARGET_INCLUDE_DIRECTORIES(ImGui PRIVATE
-	${GLEW_INCLUDE_DIRS}
-	${glfw3_INCLUDE_DIRS}
-	${OPENGL_INCLUDE_DIRS})
-
-FILE(GLOB_RECURSE AGZUTILS_SRC "Source/Lib/AGZUtils/*.cpp" "Source/Lib/Utils/Src/*.h" "Source/Lib/Utils/Src/*.cpp" "Source/Lib/Utils/Src/*.inl")
-ADD_LIBRARY(AGZUtils STATIC ${AGZUTILS_SRC})
-FOREACH(_SRC IN ITEMS ${AGZUTILS_SRC})
-    GET_FILENAME_COMPONENT(AGZUTILS_SRC "${_SRC}" PATH)
-    STRING(REPLACE "${CMAKE_SOURCE_DIR}/Source/Lib/Utils/Src/AGZUtils" "Header" _GRP_PATH_0 "${AGZUTILS_SRC}")
-    STRING(REPLACE "${CMAKE_SOURCE_DIR}/Source/Lib/AGZUtils" "Impl" _GRP_PATH "${_GRP_PATH_0}")
-    STRING(REPLACE "/" "\\" _GRP_PATH "${_GRP_PATH}")
-    SOURCE_GROUP("${_GRP_PATH}" FILES "${_SRC}")
-ENDFOREACH()
-TARGET_INCLUDE_DIRECTORIES(AGZUtils PRIVATE
-	${GLEW_INCLUDE_DIRS}
-	${glfw3_INCLUDE_DIRS}
-	${OPENGL_INCLUDE_DIRS})
-
-FILE(GLOB_RECURSE LAUNCHER_SRC "Source/Atrc/Launcher/*.cpp" "Source/Atrc/Launcher/*.h")
-ADD_EXECUTABLE(Launcher ${LAUNCHER_SRC})
-TARGET_LINK_LIBRARIES(Launcher Mgr Core AGZUtils ${STDFS_LD_LIB})
-
-FILE(GLOB_RECURSE EDITOR_SRC "Source/Atrc/Editor/*.cpp" "Source/Atrc/Editor/*.h"  "Source/Atrc/Editor/*.inl")
-ADD_EXECUTABLE(Editor ${EDITOR_SRC})
-FOREACH(_SRC IN ITEMS ${EDITOR_SRC})
-    GET_FILENAME_COMPONENT(EDITOR_SRC "${_SRC}" PATH)
-    STRING(REPLACE "${CMAKE_SOURCE_DIR}/Source/Atrc/Editor" "" _GRP_PATH "${EDITOR_SRC}")
-    STRING(REPLACE "/" "\\" _GRP_PATH "${_GRP_PATH}")
-    SOURCE_GROUP("${_GRP_PATH}" FILES "${_SRC}")
-ENDFOREACH()
-
-TARGET_INCLUDE_DIRECTORIES(Editor PRIVATE
-	${GLEW_INCLUDE_DIRS}
-	${glfw3_INCLUDE_DIRS}
-	${OPENGL_INCLUDE_DIRS})
-TARGET_LINK_LIBRARIES(Editor PRIVATE
-	ImGui GLEW::GLEW glfw ${OPENGL_LIBRARIES}
-	Mgr Core AGZUtils cnpy ${STDFS_LD_LIB})
-
-ADD_LIBRARY(cnpy STATIC "Source/Lib/cnpy/cnpy.cpp" "Source/Lib/cnpy/cnpy.h")
-TARGET_INCLUDE_DIRECTORIES(cnpy PUBLIC ${ZLIB_INCLUDE_DIRS})
-TARGET_LINK_LIBRARIES(cnpy ${ZLIB_LIBRARIES})
-
-FILE(GLOB_RECURSE SH2D_SRC "Source/Atrc/SH2D/*.cpp" "Source/Atrc/SH2D/*.h")
-ADD_EXECUTABLE(SH2D ${SH2D_SRC})
-FOREACH(_SRC IN ITEMS ${SH2D_SRC})
-    GET_FILENAME_COMPONENT(SH2D_SRC "${_SRC}" PATH)
-    STRING(REPLACE "${CMAKE_SOURCE_DIR}/Source/Atrc/SH2D" "" _GRP_PATH "${SH2D_SRC}")
-    STRING(REPLACE "/" "\\" _GRP_PATH "${_GRP_PATH}")
-    SOURCE_GROUP("${_GRP_PATH}" FILES "${_SRC}")
-ENDFOREACH()
-TARGET_INCLUDE_DIRECTORIES(SH2D PRIVATE)
-TARGET_LINK_LIBRARIES(SH2D PRIVATE Mgr Core AGZUtils cnpy ${STDFS_LD_LIB})
+ADD_SUBDIRECTORY(Source/Lib/AGZUtils)
+ADD_SUBDIRECTORY(Source/Lib/imgui)
+ADD_SUBDIRECTORY(Source/Lib/cnpy)
+	
+ADD_SUBDIRECTORY(Source/Atrc/Core)
+ADD_SUBDIRECTORY(Source/Atrc/Mgr)
+ADD_SUBDIRECTORY(Source/Atrc/Editor)
+ADD_SUBDIRECTORY(Source/Atrc/SH2D)
+ADD_SUBDIRECTORY(Source/Atrc/Launcher)
