add project EnvLight

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -36,5 +36,6 @@ ADD_SUBDIRECTORY(Source/Lib/cnpy)
 ADD_SUBDIRECTORY(Source/Atrc/Core)
 ADD_SUBDIRECTORY(Source/Atrc/Mgr)
 ADD_SUBDIRECTORY(Source/Atrc/Editor)
+ADD_SUBDIRECTORY(Source/Atrc/EnvLight)
 ADD_SUBDIRECTORY(Source/Atrc/SH2D)
 ADD_SUBDIRECTORY(Source/Atrc/Launcher)
