指定文件生成目录

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -6,6 +6,10 @@ ENDIF()
 
 PROJECT(Atrc)
 
+set(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/Bin/Lib)
+set(CMAKE_LIBRARY_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/Bin/Lib)
+set(CMAKE_RUNTIME_OUTPUT_DIRECTORY ${CMAKE_BINARY_DIR}/Bin)
+
 SET(CMAKE_INCLUDE_CURRENT_DIR ON)
 INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/Source/Lib/Utils/Src/)
 INCLUDE_DIRECTORIES(${PROJECT_SOURCE_DIR}/Source/)
@@ -39,3 +43,4 @@ ADD_SUBDIRECTORY(Source/Atrc/Editor)
 ADD_SUBDIRECTORY(Source/Atrc/EnvLight)
 ADD_SUBDIRECTORY(Source/Atrc/SH2D)
 ADD_SUBDIRECTORY(Source/Atrc/Launcher)
+
