--- a/src/cli/CMakeLists.txt
+++ b/src/cli/CMakeLists.txt
@@ -28,14 +28,12 @@ SET(CLI_INCLUDE_DIRS "${PROJECT_SOURCE_DIR}/include/")
 
 ADD_DEFINITIONS(-DAGZ_LOG_LEVEL=2)
 
-#ADD_DEPENDENCIES(CLI AssImp)
-
 TARGET_INCLUDE_DIRECTORIES(CLI PRIVATE ${MISC_INCLUDE_DIRS})
 TARGET_INCLUDE_DIRECTORIES(CLI PRIVATE ${BCD_INCLUDE_DIRS})
 TARGET_INCLUDE_DIRECTORIES(CLI PRIVATE ${CLI_INCLUDE_DIRS})
 TARGET_INCLUDE_DIRECTORIES(CLI PRIVATE ${AGZUtils_INCLUDE_DIRS})
 TARGET_INCLUDE_DIRECTORIES(CLI PRIVATE ${Tracer_INCLUDE_DIRS})
-TARGET_INCLUDE_DIRECTORIES(CLI PRIVATE ${TinyObjLoader_INCLUDE_DIRS})
+TARGET_INCLUDE_DIRECTORIES(CLI PRIVATE ${LUA_INCLUDE_DIRS})
 IF(USE_EMBREE)
 	TARGET_INCLUDE_DIRECTORIES(CLI PRIVATE ${EMBREE_INCLUDE_DIRS})
 	ADD_DEPENDENCIES(CLI Embree3)
@@ -49,4 +47,4 @@ IF(USE_OIDN)
 	SET(CLI_OIDN_LIB OpenImageDenoise)
 ENDIF()
 
-TARGET_LINK_LIBRARIES(CLI AGZUtils TinyObjLoader ${STDFS_LD_LIB} ${CLI_EMBREE_LIB} ${CLI_BCD_LIB} ${CLI_OIDN_LIB})
+TARGET_LINK_LIBRARIES(CLI AGZUtils Lua ${STDFS_LD_LIB} ${CLI_EMBREE_LIB} ${CLI_BCD_LIB} ${CLI_OIDN_LIB})
