--- a/src/obj_to_scene/CMakeLists.txt
+++ b/src/obj_to_scene/CMakeLists.txt
@@ -23,6 +23,5 @@ SET(OBJ_TO_SCENE_INCLUDE_DIRS "${PROJECT_SOURCE_DIR}/include/")
 TARGET_INCLUDE_DIRECTORIES(obj_to_scene PRIVATE ${MISC_INCLUDE_DIRS})
 TARGET_INCLUDE_DIRECTORIES(obj_to_scene PRIVATE ${OBJ_TO_SCENE_INCLUDE_DIRS})
 TARGET_INCLUDE_DIRECTORIES(obj_to_scene PRIVATE ${AGZUtils_INCLUDE_DIRS})
-TARGET_INCLUDE_DIRECTORIES(obj_to_scene PRIVATE ${TinyObjLoader_INCLUDE_DIRS})
 
-TARGET_LINK_LIBRARIES(obj_to_scene PRIVATE AGZUtils TinyObjLoader ${STDFS_LD_LIB})
+TARGET_LINK_LIBRARIES(obj_to_scene PRIVATE AGZUtils ${STDFS_LD_LIB})
