--- a/src/cli/CMakeLists.txt
+++ b/src/cli/CMakeLists.txt
@@ -7,7 +7,7 @@ FILE(GLOB_RECURSE CLI_SRC
 		"${PROJECT_SOURCE_DIR}/src/*.h"
 		"${PROJECT_SOURCE_DIR}/include/agz/cli/*.h"
 		"${PROJECT_SOURCE_DIR}/include/agz/cli/*.inl")
-SET(CLI_SRC ${CLI_SRC} ${TRACER_SRC})
+SET(CLI_SRC ${CLI_SRC} ${TRACER_SRC} ${TRACER_UTILITY_SRC})
 ADD_EXECUTABLE(CLI ${CLI_SRC})
 
 SET_TARGET_PROPERTIES(
@@ -18,6 +18,8 @@ FOREACH(_SRC IN ITEMS ${CLI_SRC})
     GET_FILENAME_COMPONENT(CLI_SRC "${_SRC}" PATH)
     STRING(REPLACE "${PROJECT_SOURCE_DIR}/include/agz/cli" "cli/include" _GRP_PATH "${CLI_SRC}")
     STRING(REPLACE "${PROJECT_SOURCE_DIR}/src" "cli/src" _GRP_PATH "${_GRP_PATH}")
+    STRING(REPLACE "${TRACER_UTILITY_SOURCE_DIR}/include/agz/tracer_utility" "tracer_utility/include" _GRP_PATH "${_GRP_PATH}")
+    STRING(REPLACE "${TRACER_UTILITY_SOURCE_DIR}/src" "tracer_utility/src" _GRP_PATH "${_GRP_PATH}")
     STRING(REPLACE "${TRACER_SOURCE_DIR}/include/agz/tracer" "tracer/include" _GRP_PATH "${_GRP_PATH}")
     STRING(REPLACE "${TRACER_SOURCE_DIR}/src" "tracer/src" _GRP_PATH "${_GRP_PATH}")
     STRING(REPLACE "/" "\\" _GRP_PATH "${_GRP_PATH}")
@@ -32,6 +34,7 @@ TARGET_INCLUDE_DIRECTORIES(CLI PRIVATE ${MISC_INCLUDE_DIRS})
 TARGET_INCLUDE_DIRECTORIES(CLI PRIVATE ${BCD_INCLUDE_DIRS})
 TARGET_INCLUDE_DIRECTORIES(CLI PRIVATE ${CLI_INCLUDE_DIRS})
 TARGET_INCLUDE_DIRECTORIES(CLI PRIVATE ${AGZUtils_INCLUDE_DIRS})
+TARGET_INCLUDE_DIRECTORIES(CLI PRIVATE ${Tracer_UTILITY_INCLUDE_DIRS})
 TARGET_INCLUDE_DIRECTORIES(CLI PRIVATE ${Tracer_INCLUDE_DIRS})
 TARGET_INCLUDE_DIRECTORIES(CLI PRIVATE ${LUA_INCLUDE_DIRS})
 IF(USE_EMBREE)
@@ -47,4 +50,4 @@ IF(USE_OIDN)
 	SET(CLI_OIDN_LIB OpenImageDenoise)
 ENDIF()
 
-TARGET_LINK_LIBRARIES(CLI AGZUtils Lua ${STDFS_LD_LIB} ${CLI_EMBREE_LIB} ${CLI_BCD_LIB} ${CLI_OIDN_LIB})
+TARGET_LINK_LIBRARIES(CLI AGZUtils ${LUA_LIBRARIES} ${STDFS_LD_LIB} ${CLI_EMBREE_LIB} ${CLI_BCD_LIB} ${CLI_OIDN_LIB})
