--- a/lib/lua/CMakeLists.txt
+++ b/lib/lua/CMakeLists.txt
@@ -7,4 +7,6 @@ FILE(GLOB_RECURSE LUA_SRC
 	"${PROJECT_SOURCE_DIR}/*.h")
 ADD_LIBRARY(Lua ${LUA_SRC})
 
+SET_PROPERTY(TARGET Lua PROPERTY FOLDER dependencies)
+
 SET(LUA_INCLUDE_DIRS ${PROJECT_SOURCE_DIR} CACHE STRING "lua including directories")
