implement oren-nayar material plugin; add doc

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,4 +1,4 @@
-CMAKE_MINIMUM_REQUIRED(VERSION 3.10)
+﻿CMAKE_MINIMUM_REQUIRED(VERSION 3.10)
 
 IF(DEFINED ENV{VCPKG_ROOT} AND NOT DEFINED CMAKE_TOOLCHAIN_FILE)
   SET(CMAKE_TOOLCHAIN_FILE $ENV{VCPKG_ROOT}/scripts/buildsystems/vcpkg.cmake CACHE STRING "")
@@ -35,6 +35,7 @@ IF("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang")
 ELSEIF("${CMAKE_CXX_COMPILER_ID}" STREQUAL "GNU")
     SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pthread")
     SET(STDFS_LD_LIB "stdc++fs")
+    SET(CMAKE_EXE_LINKER_FLAGS "-ldl")
 	MESSAGE(WARNING "g++ configuration is untested")
 ENDIF()
 
@@ -47,6 +48,10 @@ IF(USE_EMBREE)
 		SET(EMBREE_IGNORE_CMAKE_CXX_FLAGS "")
 	ELSE()
 		SET(EMBREE_IGNORE_CMAKE_CXX_FLAGS "-DEMBREE_IGNORE_CMAKE_CXX_FLAGS=OFF")
+	ENDIF()
+	
+	IF(NOT DEFINED EMBREE_MAX_ISA)
+		SET(EMBREE_MAX_ISA AVX2)
 	ENDIF()
 
 	SET(Embree3_VERSION "3.5.2")
@@ -69,7 +74,7 @@ IF(USE_EMBREE)
 			"-DEMBREE_GEOMETRY_POINT=OFF"
 			"-DEMBREE_ISPC_SUPPORT=OFF"
 			"-DEMBREE_STATIC_LIB=ON"
-			"-DEMBREE_MAX_ISA=AVX2"
+			"-DEMBREE_MAX_ISA=${EMBREE_MAX_ISA}"
 			"${EMBREE_IGNORE_CMAKE_CXX_FLAGS}"
 			"-DCMAKE_C_COMPILER=${CMAKE_C_COMPILER}"
 			"-DCMAKE_CXX_COMPILER=${CMAKE_CXX_COMPILER}"
@@ -79,6 +84,7 @@ IF(USE_EMBREE)
 	
 	SET(EMBREE_INCLUDE_DIRS "${PROJECT_SOURCE_DIR}/lib/embree3/src/Embree3/include/")
 
+	# 下面的一系列embree的静态库必须按此顺序链接
 	IF(MSVC)
 		SET(EMBREE_LIBRARIES
 			optimized "${PROJECT_SOURCE_DIR}/lib/embree3/src/Embree3-build/Release/embree3.lib"
@@ -158,7 +164,7 @@ IF(LUA_ENABLE_JIT)
 	IF(MSVC)
 		SET(LUA_LIBRARIES ${PROJECT_SOURCE_DIR}/lib/luajit/lua51.lib)
 	ELSE()
-		SET(LUA_LIBRARIES ${PROJECT_SOURCE_DIR}/lib/luajit/lua.a)
+		SET(LUA_LIBRARIES ${PROJECT_SOURCE_DIR}/lib/luajit/libluajit.so)
 	ENDIF()
 ELSE()
 	ADD_SUBDIRECTORY(lib/lua)
@@ -174,6 +180,6 @@ ADD_SUBDIRECTORY(lib/utility/src)
 ADD_SUBDIRECTORY(src/tracer_utility)
 ADD_SUBDIRECTORY(src/tracer)
 ADD_SUBDIRECTORY(src/tracer_cshader)
-ADD_SUBDIRECTORY(src/c_materials/ideal_diffuse)
+ADD_SUBDIRECTORY(src/c_materials/oren_nayar)
 ADD_SUBDIRECTORY(src/cli)
 ADD_SUBDIRECTORY(src/obj_to_scene)
