--- a/lib/bcd/CMakeLists.txt
+++ b/lib/bcd/CMakeLists.txt
@@ -12,7 +12,7 @@ FILE(GLOB_RECURSE BCD_SRC
 		"${PROJECT_SOURCE_DIR}/include/*.hpp")
 ADD_LIBRARY(${TARGET_NAME} STATIC ${BCD_SRC})
 
-SET_PROPERTY(TARGET ${TARGET_NAME} PROPERTY FOLDER dependencies)
+SET_PROPERTY(TARGET ${TARGET_NAME} PROPERTY FOLDER agz_dependencies)
 
 FOREACH(_SRC IN ITEMS ${BCD_SRC})
     GET_FILENAME_COMPONENT(BCD_SRC "${_SRC}" PATH)
