--- a/src/cli/CMakeLists.txt
+++ b/src/cli/CMakeLists.txt
@@ -10,9 +10,9 @@ FILE(GLOB_RECURSE CLI_SRC
 SET(CLI_SRC ${CLI_SRC} ${TRACER_SRC} ${TRACER_UTILITY_SRC})
 ADD_EXECUTABLE(CLI ${CLI_SRC})
 
-SET_TARGET_PROPERTIES(
-    CLI PROPERTIES
-    VS_DEBUGGER_WORKING_DIRECTORY "${PROJECT_SOURCE_DIR}/../../asset")
+#SET_TARGET_PROPERTIES(
+#    CLI PROPERTIES
+#    VS_DEBUGGER_WORKING_DIRECTORY "${PROJECT_SOURCE_DIR}/../../asset")
 
 FOREACH(_SRC IN ITEMS ${CLI_SRC})
     GET_FILENAME_COMPONENT(CLI_SRC "${_SRC}" PATH)
