--- a/src/obj_to_scene/CMakeLists.txt
+++ b/src/obj_to_scene/CMakeLists.txt
@@ -10,6 +10,8 @@ FILE(GLOB_RECURSE OBJ_TO_SCENE_SRC
 SET(OBJ_TO_SCENE_SRC ${OBJ_TO_SCENE_SRC})
 ADD_EXECUTABLE(obj_to_scene ${OBJ_TO_SCENE_SRC})
 
+SET_PROPERTY(TARGET obj_to_scene PROPERTY FOLDER agz_tools)
+
 FOREACH(_SRC IN ITEMS ${OBJ_TO_SCENE_SRC})
     GET_FILENAME_COMPONENT(OBJ_TO_SCENE_SRC "${_SRC}" PATH)
     STRING(REPLACE "${PROJECT_SOURCE_DIR}/include/agz/obj_to_scene" "obj_to_scene/include" _GRP_PATH "${OBJ_TO_SCENE_SRC}")
