add normal mapping; remove bcd denoiser

--- a/src/cli/CMakeLists.txt
+++ b/src/cli/CMakeLists.txt
@@ -31,7 +31,6 @@ SET(CLI_INCLUDE_DIRS "${PROJECT_SOURCE_DIR}/include/")
 ADD_DEFINITIONS(-DAGZ_LOG_LEVEL=2)
 
 TARGET_INCLUDE_DIRECTORIES(CLI PRIVATE ${MISC_INCLUDE_DIRS})
-TARGET_INCLUDE_DIRECTORIES(CLI PRIVATE ${BCD_INCLUDE_DIRS})
 TARGET_INCLUDE_DIRECTORIES(CLI PRIVATE ${CLI_INCLUDE_DIRS})
 TARGET_INCLUDE_DIRECTORIES(CLI PRIVATE ${AGZUtils_INCLUDE_DIRS})
 TARGET_INCLUDE_DIRECTORIES(CLI PRIVATE ${Tracer_UTILITY_INCLUDE_DIRS})
@@ -42,12 +41,8 @@ IF(USE_EMBREE)
 	ADD_DEPENDENCIES(CLI Embree3)
 	SET(CLI_EMBREE_LIB  ${EMBREE_LIBRARIES})
 ENDIF()
-IF(USE_BCD)
-	TARGET_INCLUDE_DIRECTORIES(CLI PRIVATE ${BCD_INCLUDE_DIRS})
-	SET(CLI_BCD_LIB BCD)
-ENDIF()
 IF(USE_OIDN)
 	SET(CLI_OIDN_LIB OpenImageDenoise)
 ENDIF()
 
-TARGET_LINK_LIBRARIES(CLI AGZUtils ${LUA_LIBRARIES} ${STDFS_LD_LIB} ${CLI_EMBREE_LIB} ${CLI_BCD_LIB} ${CLI_OIDN_LIB})
+TARGET_LINK_LIBRARIES(CLI AGZUtils ${LUA_LIBRARIES} ${STDFS_LD_LIB} ${CLI_EMBREE_LIB} ${CLI_OIDN_LIB})
