remove luamat; remove guided pt and sppm; add absorbtion medium; add native film

--- a/src/cli/CMakeLists.txt
+++ b/src/cli/CMakeLists.txt
@@ -35,7 +35,6 @@ TARGET_INCLUDE_DIRECTORIES(CLI PRIVATE ${CLI_INCLUDE_DIRS})
 TARGET_INCLUDE_DIRECTORIES(CLI PRIVATE ${AGZUtils_INCLUDE_DIRS})
 TARGET_INCLUDE_DIRECTORIES(CLI PRIVATE ${Tracer_UTILITY_INCLUDE_DIRS})
 TARGET_INCLUDE_DIRECTORIES(CLI PRIVATE ${Tracer_INCLUDE_DIRS})
-TARGET_INCLUDE_DIRECTORIES(CLI PRIVATE ${LUA_INCLUDE_DIRS})
 IF(USE_EMBREE)
 	TARGET_INCLUDE_DIRECTORIES(CLI PRIVATE ${EMBREE_INCLUDE_DIRS})
 	ADD_DEPENDENCIES(CLI Embree3)
@@ -45,4 +44,4 @@ IF(USE_OIDN)
 	SET(CLI_OIDN_LIB OpenImageDenoise)
 ENDIF()
 
-TARGET_LINK_LIBRARIES(CLI AGZUtils ${LUA_LIBRARIES} ${STDFS_LD_LIB} ${CLI_EMBREE_LIB} ${CLI_OIDN_LIB})
+TARGET_LINK_LIBRARIES(CLI AGZUtils ${STDFS_LD_LIB} ${CLI_EMBREE_LIB} ${CLI_OIDN_LIB})
